Extraction code written

--- a/Whatsapp_notes_extractor/train.ipynb
+++ b/Whatsapp_notes_extractor/train.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import keras\n",
@@ -23,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -38,6 +54,7 @@
    "source": [
     "batch_size = 4\n",
     "\n",
+    "# data augmentation\n",
     "train_datagen = ImageDataGenerator(\n",
     "        rescale=1./255,    \n",
     "        rotation_range=40,\n",
@@ -49,8 +66,8 @@
     "        fill_mode='nearest')\n",
     "\n",
     "train_generator = train_datagen.flow_from_directory(\n",
-    "        'data',  # this is the target directory\n",
-    "        target_size=(124, 124),  # all images will be resized to 150x150\n",
+    "        'data',  # this is the target data directory\n",
+    "        target_size=(124, 124),  # all images will be resized to 124 x 124\n",
     "        batch_size=batch_size,\n",
     "        class_mode='binary')  # since we use binary_crossentropy loss, we need binary labels"
    ]
@@ -77,9 +94,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Build Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = Sequential()\n",
@@ -103,23 +129,36 @@
     "model.add(Activation('sigmoid'))\n",
     "\n",
     "model.compile(loss='binary_crossentropy',\n",
-    "              optimizer='rmsprop',\n",
+    "              optimizer='adam',\n",
     "              metrics=['accuracy'])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50\n",
-      "500/500 [==============================] - 88s 175ms/step - loss: 0.3886 - acc: 0.8135\n",
-      "Epoch 2/50\n",
-      " 41/500 [=>............................] - ETA: 1:34 - loss: 0.4223 - acc: 0.8415- ETA: 1:33 - loss: 0.471"
+      "Epoch 1/5\n",
+      "500/500 [==============================] - 190s 381ms/step - loss: 0.4161 - acc: 0.8125\n",
+      "Epoch 2/5\n",
+      "500/500 [==============================] - 125s 249ms/step - loss: 0.3499 - acc: 0.8150\n",
+      "Epoch 3/5\n",
+      "500/500 [==============================] - 164s 328ms/step - loss: 0.3263 - acc: 0.8190\n",
+      "Epoch 4/5\n",
+      "500/500 [==============================] - 105s 210ms/step - loss: 0.3191 - acc: 0.8410\n",
+      "Epoch 5/5\n",
+      "500/500 [==============================] - 100s 201ms/step - loss: 0.3118 - acc: 0.8280\n"
      ]
     }
    ],
@@ -127,22 +166,32 @@
     "model.fit_generator(\n",
     "        train_generator,\n",
     "        steps_per_epoch=2000 // batch_size,\n",
-    "        epochs=50)\n",
-    "model.save_weights('first_try.h5')  # always save your weights after training or during training"
+    "        epochs=5)\n",
+    "model.save_weights('weights.h5')  # save weights after training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((4, 124, 124, 3), (4, 1))"
+       "array([[ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [False]], dtype=bool)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +199,6 @@
    "source": [
     "x, y = next(train_generator)\n",
     "y = y.reshape(len(y), 1)\n",
-    "\n",
     "\n",
     "y_pred = model.predict(x)\n",
     "y_pred = (y_pred > 0.5) * 1\n",
@@ -160,13 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "img_path = random.choice(os.listdir('data/1'))\n",
-    "img = load_img(\"data/1/\" + img_path) #this is a PIL image\n",
-    "x = img_to_array(img)  # this is a Numpy array with shape (3, 150, 150)"
+    "img_path = random.choice(glob('data/1/*'))\n",
+    "img = load_img(img_path, target_size=(124, 124, 3)) # this is a PIL image\n",
+    "x = img_to_array(img) / 255.0\n",
+    "y = model.predict(np.expand_dims(x, axis=0))\n",
+    "print(np.squeeze(y) > 0.5)\n",
+    "img"
    ]
   },
   {
