script written, code refractoring

--- a/WhatsApp_img_notes_extractor/behind_the_scenes/train.ipynb
+++ b/WhatsApp_img_notes_extractor/behind_the_scenes/train.ipynb
@@ -9,25 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import keras\n",
-    "from keras.models import *\n",
-    "from keras.layers import *\n",
-    "from keras.optimizers import *\n",
     "from keras.preprocessing.image import *\n",
-    "from keras.callbacks import EarlyStopping\n",
-    "from tqdm import tqdm\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import random\n",
+    "from glob import glob\n",
+    "from model import CNN_model\n",
     "%matplotlib inline"
    ]
   },
@@ -40,17 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 734 images belonging to 2 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 4\n",
     "\n",
@@ -74,63 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((4, 124, 124, 3), (4,))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x, y = next(train_generator)\n",
     "x.shape, y.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Build Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model = Sequential()\n",
-    "model.add(Conv2D(32, (3, 3), input_shape=(124, 124, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(32, (3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(64, (3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "model.add(Flatten())  # this converts our 3D feature maps to 1D feature vectors\n",
-    "model.add(Dense(64))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(1))\n",
-    "model.add(Activation('sigmoid'))\n",
-    "\n",
-    "model.compile(loss='binary_crossentropy',\n",
-    "              optimizer='adam',\n",
-    "              metrics=['accuracy'])"
    ]
   },
   {
@@ -142,27 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "500/500 [==============================] - 190s 381ms/step - loss: 0.4161 - acc: 0.8125\n",
-      "Epoch 2/5\n",
-      "500/500 [==============================] - 125s 249ms/step - loss: 0.3499 - acc: 0.8150\n",
-      "Epoch 3/5\n",
-      "500/500 [==============================] - 164s 328ms/step - loss: 0.3263 - acc: 0.8190\n",
-      "Epoch 4/5\n",
-      "500/500 [==============================] - 105s 210ms/step - loss: 0.3191 - acc: 0.8410\n",
-      "Epoch 5/5\n",
-      "500/500 [==============================] - 100s 201ms/step - loss: 0.3118 - acc: 0.8280\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "model = CNN_model()\n",
+    "\n",
     "model.fit_generator(\n",
     "        train_generator,\n",
     "        steps_per_epoch=2000 // batch_size,\n",
@@ -179,23 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ True],\n",
-       "       [ True],\n",
-       "       [ True],\n",
-       "       [False]], dtype=bool)"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x, y = next(train_generator)\n",
     "y = y.reshape(len(y), 1)\n",
@@ -208,10 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_path = random.choice(glob('data/1/*'))\n",
